# plain-factory

./: .gitmodules  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: setup-repo
src/plain_factory/: __init__.py  __main__.py  _utils.py  cli.py  license_factory.py
src/plain_factory/factory/: __init__.py  _boilerplate.py  _constants.py  _content_interface.py  _content_types.py  _context.py  _deconstruct.py  _formatter.py  _license_metadata.py  _paragraph.py  _tab_generators.py  _text_processor.py
src/plain_factory/logger/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_cli.py  test_factory.py
tests/fixtures/: sample_license.yaml
